--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+approx = "0.5.1"
+float-cmp = "0.10.0"
 serde = { version = "1.0.216", features = ["derive"] }
+serde_json = "1.0.133"
